--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ const CONFIG = {
   ],
   social: [
     {name:"Instagram", url:"https://www.instagram.com/foruxy_/", icon:"https://www.gstatic.com/youtube/img/watch/social_media/instagram_1x.png"},
-    {name:"Twitter", url:"https://x.com/Foruxy", icon:"https://www.gstatic.com/youtube/img/watch/social_media/X_1x.png"},
+    {name:"X", url:"https://x.com/Foruxy", icon:"https://www.gstatic.com/youtube/img/watch/social_media/twitter_1x.png"},
     {name:"Youtube", url:"https://www.youtube.com/@Foruxy", icon:"https://www.gstatic.com/youtube/img/watch/yt_favicon_ringo2.png"},
     {name:"Discord", url:"https://discord.com/users/797770498745303092", icon:"https://www.gstatic.com/youtube/img/watch/social_media/discord_1x.png"}
   ]
