--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   --accent:#38bdf8;
 
 
-  --loading-bar-color:#3e3f40
-  --loading-bar-background:#f0f2f5
-  --loading-text-color:#e65045
+  --loading-bar-color:#3e3f40;
+  --loading-bar-background:#f0f2f5;
+  --loading-text-color:#e65045;
   /* Variabel baru untuk outline */
   --avatar-outline-color:#090933;      /* Warna outline avatar utama */
   --avatar-outline-width:4px;          /* Ketebalan outline avatar utama */
