--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   --main-background-color:#262525;
   --loading-bar-color:#3e3f40;
+  --loading-bar-border:
   --loading-background-color:#373737;
   --loading-text-color:#e65045;
   --avatar-outline-color:#090933;
@@ -28,7 +29,7 @@
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
 #loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:var(--loading-background-color);display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--loading-text-color);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
 #loadingScreen .bar-container{width: 50%;max-width: 260px;height: 8px;border: 2px solid var(--accent);border-radius: 6px;margin-top: 16px;overflow: hidden;}
-#loadingScreen .bar{width:0%;height:100%;background:var(--loading-bar-color);transition:width .1s linear;}
+#loadingScreen .bar{width:0%;height:100%;background:var(--accent);transition:width .1s linear;}
 .loading-text{animation: slowBlink 2.8s ease-in-out infinite;}
 .cursor{position:fixed;width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,.9);mix-blend-mode:difference;pointer-events:none;z-index:9999;transform:translate(-50%,-50%);transition:width .2s,height .2s,background .2s,border .2s;}
 .cursor.magnify{width:48px;height:48px;background:rgba(255,255,255,.15);backdrop-filter:blur(6px);}
