--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   --main-background-color:#262525;
   --loading-bar-color:#3e3f40;
-  --loading-bar-border:
+  --loading-bar-border:#3e3f40;
   --loading-background-color:#373737;
   --loading-text-color:#e65045;
   --avatar-outline-color:#090933;
