--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   --accent:#38bdf8;
 
   --main-background-color:#262525;
-  --loading-bar-color:#3e3f40;
-  --loading-bar-border:#3e3f40;
+  --loading-bar-color:#38bdf8;
+  --loading-bar-border:#38bdf8;
   --loading-background-color:#373737;
-  --loading-text-color:#e65045;
+  --loading-text-color:#38bdf8;
   --avatar-outline-color:#090933;
   --avatar-outline-width:4px;
   --about-avatar-outline-color:#f87171;
