--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   --mywork-box-outline-width: 2px;
 
 }
-*,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Hammersmith One", system-ui, sans-serif;,cursive;cursor:none!important;margin:0;padding:0;}
+*,body,.container,.link,.paper-box{box-sizing:border-box;font-family:"Hammersmith One", latin, sans-serif;,cursive;cursor:none!important;margin:0;padding:0;}
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
 #loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:var(--loading-background-color);display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--loading-text-color);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
 #loadingScreen .bar-container{width: 50%;max-width: 260px;height: 8px;border: 2px solid var(--accent);border-radius: 6px;margin-top: 16px;overflow: hidden;}
