--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Foruxy</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 <style>
 :root{
   --background-image:url("https://cdn.discordapp.com/attachments/1382212470801694770/1454463795316392057/Muffet.gif?ex=69512e77&is=694fdcf7&hm=1ecddbdcfa0ddfe3f7a0bfefb8e9254f76752014545c396a40263d07c6d1404b&");
@@ -23,7 +24,6 @@
   --mywork-image-outline-width:2px;
   --mywork-border-color: #8a898c;
   --mywork-box-outline-width: 2px;
-<link href="https://fonts.googleapis.com/css2?family=Jersey+25&display=swap" rel="stylesheet">
 
 }
 /* GLOBAL FONT (isi teks) */
@@ -91,7 +91,9 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 50%  { opacity: 0.4; }
 100% { opacity: 1; }
 }
-
+{
+  font-family: "Jersey 25", cursive !important;
+}
 </style>
 </head>
 <body>
