--- a/index.html
+++ b/index.html
@@ -91,8 +91,23 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 50%  { opacity: 0.4; }
 100% { opacity: 1; }
 }
-{
+strong {
   font-family: "Jersey 25", cursive !important;
+  font-weight: normal; /* Jersey 25 tidak punya bold */
+}
+
+/* About box */
+.about-race,
+.about-bio,
+.about-name {
+  font-family: "Jersey 25", cursive;
+}
+
+/* My Work labels */
+.mywork-owner strong,
+.mywork-date strong,
+.mywork-name strong {
+  font-family: "Jersey 25", cursive;
 }
 </style>
 </head>
