--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ strong {
 }
 
 /* About box */
-.about-race,
-.about-bio,
-.about-name {
+.about-race strong,
+.about-bio strong,
+.about-name strong {
   font-family: "Jersey 25", cursive;
 }
 
