--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   --background-image:url("https://cdn.discordapp.com/attachments/1382212470801694770/1454463795316392057/Muffet.gif?ex=69512e77&is=694fdcf7&hm=1ecddbdcfa0ddfe3f7a0bfefb8e9254f76752014545c396a40263d07c6d1404b&");
   --avatar-image-background:url("https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png");
   --accent:#38bdf8;
-
+  
+  --font-main: "Poppins", sans-serif;
+  --font-title: "Jersey 25", cursive;
+ 
   --main-background-color:#262525;
   --loading-bar-color:#38bdf8;
   --loading-bar-border:#38bdf8;
@@ -18,7 +21,7 @@
   --loading-text-color:#38bdf8;
   --avatar-outline-color:#090933;
   --avatar-outline-width:4px;
-  --about-avatar-outline-color:#f87171;
+  --about-avatar-outline-color:#f87171;s
   --about-avatar-outline-width:3px;
   --mywork-image-outline-color:#f1f0f5;
   --mywork-image-outline-width:2px;
@@ -27,27 +30,7 @@
 
 }
 /* GLOBAL FONT (isi teks) */
-*,body,.container,.paper-box{
-  box-sizing:border-box;
-  font-family: system-ui, -apple-system, "Segoe UI", sans-serif;
-  cursor:none!important;
-  margin:0;
-  padding:0;
-}
-
-/* JERSEY 25 KHUSUS JUDUL & BUTTON */
-h1,
-.link span,
-footer,
-.about-name,
-.mywork-name strong {
-  font-family: "Jersey 25", cursive;
-  letter-spacing: 0.6px;
-}
-h1 {
-  font-size: 2rem;
-}
-
+*,body,.container,.paper-box{box-sizing:border-box;font-family: var(--font-main);cursor:none!important;margin:0;padding:0;}
 body{min-height:100vh;background:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),var(--background-image);background-size:cover;background-position:center;display:flex;justify-content:center;align-items:center;color:#e5e7eb;overflow:hidden;}
 #loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;background:var(--loading-background-color);display:flex;flex-direction:column;justify-content:center;align-items:center;color:var(--loading-text-color);font-size:1.6rem;z-index:99999;transition:opacity .5s;}
 #loadingScreen .bar-container{width: 50%;max-width: 260px;height: 8px;border: 2px solid var(--accent);border-radius: 6px;margin-top: 16px;overflow: hidden;}
@@ -119,20 +102,18 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
   content: "Bio: ";
 }
 
-/* Hapus style label lama agar tidak dobel */
-.about-name,
-.about-race,
-.about-bio {
-  font-family: inherit;
+.about-name::before,
+.about-race::before,
+.about-bio::before {
+  font-family: var(--font-title);
 }
 
-
-/* My Work labels */
 .mywork-owner strong,
 .mywork-date strong,
 .mywork-name strong {
-  font-family: "Jersey 25", cursive;
+  font-family: var(--font-title);
 }
+
 </style>
 </head>
 <body>
