--- a/index.html
+++ b/index.html
@@ -74,44 +74,44 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 50%  { opacity: 0.4; }
 100% { opacity: 1; }
 }
-/* ===== ABOUT BOX: LABEL SAJA JERSEY 25 ===== */
 
-/* Pastikan teks about pakai font normal */
-.about-box-content {
-  font-family: system-ui, -apple-system, "Segoe UI", sans-serif;
+.container h1 {
+  font-family: var(--font-title);
+  font-weight: normal; /* supaya terlihat lebih rapi */
 }
 
-/* Label "Nama:", "Race:", "Bio:" */
-.about-name::before,
-.about-race::before,
-.about-bio::before {
-  font-family: "Jersey 25", cursive;
-  letter-spacing: 0.5px;
+/* Menu utama: About Me, My Work, Social */
+#links .link span {
+  font-family: var(--font-title);
+  font-weight: normal;
+  font-size: 1.05rem; /* sedikit lebih besar untuk menonjol */
 }
 
-/* Inject label text */
-.about-name::before {
-  content: "Nama: ";
+/* Judul overlay boxes (About Me, My Work, Social) */
+.paper-box h1 {
+  font-family: var(--font-title);
+  font-weight: normal;
 }
 
-.about-race::before {
-  content: "Race: ";
-}
-
-.about-bio::before {
-  content: "Bio: ";
-}
-
+/* Label teks di About Box (Nama, Race, Bio) sudah memakai font-title via ::before */
 .about-name::before,
 .about-race::before,
 .about-bio::before {
   font-family: var(--font-title);
+  font-weight: normal;
 }
-
+/* Judul item about */
+.about-name::before {content: "Nama: ";}
+.about-race::before {content: "Race: ";}
+.about-bio::before {content: "Bio: ";
+}
+  
+/* Judul item My Work */
+.mywork-name strong,
 .mywork-owner strong,
-.mywork-date strong,
-.mywork-name strong {
+.mywork-date strong {
   font-family: var(--font-title);
+  font-weight: normal;
 }
 
 </style>
