--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 const CONFIG = {
   name:"Foruxy Puppetaru",
   tagline:"Your Partner for VTuber Servers, Moderation, and Management",
-  avatar:"https://cdn.discordapp.com/attachments/1382212470801694770/1454462899358662707/image.png",
-  aboutAvatar:"https://cdn.discordapp.com/attachments/1382212470801694770/1454462899786485780/image.png",
+  avatar:"https://cdn.discordapp.com/attachments/1382212470801694770/1454462899358662707/image.png?ex=6951d661&is=695084e1&hm=dc6c7c02e78cc22283fc0fd8a1a3f32a815a9861dd4c8b28aa32dd73e455defe&",
+  aboutAvatar:"https://cdn.discordapp.com/attachments/1382212470801694770/1454462899786485780/image.png?ex=6951d661&is=695084e1&hm=4cf8051c2dedcec17924489b8ca48d7f5b8d60b0fa96d535501105645aaf6a5e&",
   aboutName:"Foruxy Puppetaru",
   aboutRace:"Silver Catfox",
   aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
@@ -139,12 +139,12 @@ const CONFIG = {
     {image:"https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025"},
     {image:"https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png",name:"World Of Usagi🐰",owner:"Firany UM",date:"12 September 2025"}
   ],
-  social: [
-    {name:"Instagram", url:"https://www.instagram.com/foruxy_", icon:"https://www.gstatic.com/youtube/img/watch/social_media/instagram_1x.png"},
-    {name:"X", url:"https://x.com/Foruxy", icon:"https://www.gstatic.com/youtube/img/watch/social_media/twitter_1x.png"},
-    {name:"Youtube", url:"https://www.youtube.com/@Foruxy", icon:"https://www.gstatic.com/youtube/img/watch/social_media/youtube_1x.png"},
-    {name:"Discord", url:"https://discord.com/users/797770498745303092", icon:"https://www.gstatic.com/youtube/img/watch/social_media/discord_1x.png"}
-  ]
+social: [
+  {name: "Instagram",url: "https://www.instagram.com/foruxy_/",icon: "https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"},
+  {name: "X",url: "https://x.com/Foruxy",icon: "https://upload.wikimedia.org/wikipedia/commons/4/4f/X_logo.svg"},
+  {name: "Youtube",url: "https://www.youtube.com/@Foruxy",icon: "https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"},
+  {name: "Discord",url: "https://discord.com/users/797770498745303092",icon: "https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg"}
+]
 };
 
 // Populate content
