--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 #workContent::-webkit-scrollbar-track{background:rgba(255,255,255,0.05);border-radius:1px;}
 .mywork-item{display:flex;gap:16px;background: var(--mywork-background);border-radius:16px;border:var(--mywork-box-outline-width) solid var(--mywork-border-color);padding:12px;align-items:center;margin-bottom:12px;}
 .mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:var(--mywork-image-outline-width) solid var(--mywork-image-outline-color);flex-shrink:0;}.mywork-desc{display:flex;flex-direction:column;gap:6px;color:#e5e7eb;}
-.mywork-name,.mywork-owner,.mywork-date{font-size:.9rem;}
+.mywork-name,.mywork-owner,.mywork-date{font-size:1.4rem;}
 .mywork-name strong,.mywork-owner strong,.mywork-date strong{color:var(--accent);}
 .about-box-content{display:flex;gap:20px;align-items:flex-start;}
 .about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);background-size:cover;background-position:center;flex-shrink:0;}
