--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   --background-image:url("https://cdn.discordapp.com/attachments/1382212470801694770/1454463795316392057/Muffet.gif?ex=69512e77&is=694fdcf7&hm=1ecddbdcfa0ddfe3f7a0bfefb8e9254f76752014545c396a40263d07c6d1404b&");
   --avatar-image-background:url("https://cdn.discordapp.com/attachments/799015739973566545/1453160116823003177/image.png");
   --accent:#38bdf8;
-  --font-main: "Poppins", sans-serif;
+  --font-body: "Roboto", sans-serif;
   --font-title: "Jersey 25", cursive;
   --main-background-color:#262525;
   --loading-bar-color:#38bdf8;
