--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   --main-background-color:#262525;
   --loading-bar-color:#38bdf8;
   --loading-bar-border:#38bdf8;
-  --loading-background-color:#373737;
+  --loading-background-color:#38bdf8;
   --loading-text-color:#38bdf8;
   --avatar-outline-color:#090933;
   --avatar-outline-width:4px;
@@ -25,7 +25,7 @@
   --mywork-image-outline-width:2px;
   --mywork-border-color: #8a898c;
   --mywork-box-outline-width: 2px;
-  --mywork-color: #38bdf8;
+  --mywork-color: #4b38f8;
 }
 
 /* GLOBAL FONT */
