--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ const CONFIG = {
   links:[{label:"✉ About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
   myWork:[
     {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025"},
-    {image:"https://cdn.discordapp.com/icons/1431225172614054000/6db71b7db347b180f8ae28997a074631.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025"},
+    {image:"https://cdn.discordapp.com/icons/1431225172614054000/e19f0c8cbf37b33ccab1ca9b58a7f0b9.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025"},
     {image:"https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png",name:"World Of Usagi🐰",owner:"Firany UM",date:"12 September 2025"},
     {image:"https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png",name:"Kira's Aquarium🐟",owner:"Kira Maguro",date:"12 Desember 2025"},
     {image:"https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png",name:"(Private) Clanen's Fluffytopia🍭",owner:"Clara Nefia",date:"11 Juni 2025"},
     {image:"https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png",name:"Amaryn Pastry Shop🎂",owner:"Amaryn",date:"21 Agustus 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449766831710797826/748c5a036ff163c8bd67989f7a64b42b.png",name:"Kayce Pavilion",owner:"Kayce Lawrence",date:"14 Desember 2025"},
+    {image:"https://cdn.discordapp.com/icons/1449766831710797826/20f41bc549a6e664cda39ce16998f37b.png",name:"Kayce Pavilion",owner:"Kayce Lawrence",date:"14 Desember 2025"},
     {image:"https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png",name:"[ 𝓚.𝓐.𝓒 ] 𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂",owner:"Kaikaje",date:"14 Agustus 2025"},
     {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base",owner:"Foruxy",date:"27 Desember 2020"}
   ],
@@ -149,31 +149,22 @@ social: [
   {
     name: "Instagram",
     url: "https://www.instagram.com/foruxy_/",
-    svg: `<svg width="20" height="20" viewBox="0 0 24 24" fill="#000000" xmlns="http://www.w3.org/2000/svg">
-      <path d="M12 2.163c3.204 0 3.584.012 4.849.07..."/>
-    </svg>`
+    svg: `<svg aria-labelledby="icons01-icon-2-title"><title id="icons01-icon-2-title">Instagram</title><use xlink:href="#icon-85976685de3e4af37529a1ce5d57d2a7"></use></svg>`
   },
   {
     name: "X",
     url: "https://x.com/Foruxy",
-    svg: `<svg width="20" height="20" viewBox="0 0 24 24" fill="#000000" xmlns="http://www.w3.org/2000/svg">
-      <path d="M23 2.998c0 .41-.33.75-.74.75l-4.26 4.26..."/>
-    </svg>`
+    svg: `<svg aria-labelledby="icons01-icon-1-title"><title id="icons01-icon-1-title">X</title><use xlink:href="#icon-31b8880d36499db40d4e47546c4763f3"></use></svg>`
   },
   {
     name: "Youtube",
     url: "https://www.youtube.com/@Foruxy",
-    svg: `<svg width="20" height="20" viewBox="0 0 24 24" fill="#FF0000" xmlns="http://www.w3.org/2000/svg">
-      <path d="M10 15l5-3-5-3v6z"/>
-      <path d="M21.8 8s-.2-1.4-.8-2c-.8-.8-1.7-.8-2.1-.9C16.1 5 12 5 12 5h0s-4.1 0-6.9.1c-.4 0-1.3 0-2.1.9-.6.6-.8 2-.8 2S2 9.6 2 11.2v1.6c0 1.6.2 3.2.2 3.2s.2 1.4.8 2c.8.8 1.8.8 2.2.9 2.8.1 6.8.1 6.8.1s4.1 0 6.9-.1c.4 0 1.3 0 2.1-.9.6-.6.8-2 .8-2s.2-1.6.2-3.2v-1.6c0-1.6-.2-3.2-.2-3.2z"/>
-    </svg>`
+    svg: `<svg aria-labelledby="icons01-icon-3-title"><title id="icons01-icon-3-title">YouTube</title><use xlink:href="#icon-e2a43bdcfd2e22a246a1598df579c4ad"></use></svg>`
   },
   {
     name: "Discord",
     url: "https://discord.com/users/797770498745303092",
-    svg: `<svg width="20" height="20" viewBox="0 0 71 55" fill="#5865F2" xmlns="http://www.w3.org/2000/svg">
-      <path d="M60.104 4.552a58.6 58.6 0 00-14.5-4.552..."/>
-    </svg>`
+    svg: `<svg aria-labelledby="icons01-icon-5-title"><title id="icons01-icon-5-title">Discord</title><use xlink:href="#icon-3b7eeeccbb457780f277fce4669f67a0"></use></svg>`
   }
 ]
 
