--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 #workContent::-webkit-scrollbar-track{background:rgba(255,255,255,0.05);border-radius:1px;}
 .mywork-item{display:flex;gap:16px;background: var(--mywork-background);border-radius:16px;border:var(--mywork-box-outline-width) solid var(--mywork-border-color);padding:12px;align-items:center;margin-bottom:12px;}
 .mywork-image{width:100px;height:100px;object-fit:cover;border-radius:12px;border:var(--mywork-image-outline-width) solid var(--mywork-image-outline-color);flex-shrink:0;}.mywork-desc{display:flex;flex-direction:column;gap:6px;color:#e5e7eb;}
-.mywork-name,.mywork-owner,.mywork-date{font-size:1.0rem;}
-.mywork-name strong,.mywork-owner strong,.mywork-date strong,{color:var(--accent)font-size:0.8rem;}
+.mywork-name,.mywork-owner,.mywork-date.mywork-status,{font-size:1.0rem;}
+.mywork-name strong,.mywork-owner strong,.mywork-date strong,.mywork-status,{color:var(--accent)font-size:0.8rem;}
 .about-box-content{display:flex;gap:20px;align-items:flex-start;}
 .about-box-content .about-avatar{width:120px;height:120px;border-radius:12px;border:var(--about-avatar-outline-width) solid var(--about-avatar-outline-color);background-size:cover;background-position:center;flex-shrink:0;}
 .about-box-content .about-text{flex:1;color:#e5e7eb;}
@@ -74,7 +74,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .paper-box h1{font-family: var(--font-title);font-weight: normal;}
 .about-name::before,.about-race::before,.about-bio::before{font-family: var(--font-title);font-weight: normal;}
 .about-name::before{content: "Nama: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
-.mywork-name strong,.mywork-owner strong,.mywork-date strong{font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
+.mywork-name strong,.mywork-owner strong,.mywork-date strong,.mywork-status,{font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 </style>
 </head>
@@ -135,36 +135,36 @@ const CONFIG = {
   aboutBio:"Hawrru~! I'm Foruxy, the Silver Catfox!\nI create Discord servers for VTubers, manage VTuber communities, and moderate YouTube channels.\nI also support as a VTuber Advisor, Counselor, and Helper.\nSince February 2025, I’ve been dedicated to helping VTubers grow their communities with creativity and care.",
   links:[{label:"✉ About Me",url:"#about"},{label:"💼 My Work",url:"#work"},{label:"🌐 Social",url:"#social"}],
   myWork:[
-    {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025"},
-    {image:"https://cdn.discordapp.com/icons/1431225172614054000/e19f0c8cbf37b33ccab1ca9b58a7f0b9.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025"},
-    {image:"https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png",name:"World Of Usagi🐰",owner:"Firany UM",date:"12 September 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png",name:"Kira's Aquarium🐟",owner:"Kira Maguro",date:"12 Desember 2025"},
-    {image:"https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png",name:"(Private) Clanen's Fluffytopia🍭",owner:"Clara Nefia",date:"11 Juni 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png",name:"Amaryn Pastry Shop🎂",owner:"Amaryn",date:"21 Agustus 2025"},
-    {image:"https://cdn.discordapp.com/icons/1449766831710797826/20f41bc549a6e664cda39ce16998f37b.png",name:"Kayce Pavilion",owner:"Kayce Lawrence",date:"14 Desember 2025"},
-    {image:"https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png",name:"[ 𝓚.𝓐.𝓒 ] 𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂",owner:"Kaikaje",date:"14 Agustus 2025"},
-    {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base",owner:"Foruxy",date:"27 Desember 2020"}
+    {image:"https://cdn.discordapp.com/icons/1391655093920727040/aff24dcc07ba0d7913693c536696ee31.png",name:"Yasei Pyon’s Zoological Society",owner:"Yasei Pyon",date:"07 July 2025",status:"Partner"},
+    {image:"https://cdn.discordapp.com/icons/1431225172614054000/e19f0c8cbf37b33ccab1ca9b58a7f0b9.png",name:"Hidden Peak ❄",owner:"Eseuri Krasu",date:"24 October 2025",status:"Partner"},
+    {image:"https://cdn.discordapp.com/icons/1416027689554411636/c9379598ef7930896143ec33a8e8b4e3.png",name:"World Of Usagi🐰",owner:"Firany UM",date:"12 September 2025",status:"Partner"},
+    {image:"https://cdn.discordapp.com/icons/1449052821193232419/30f98d369cedebe200d852fce8323e63.png",name:"Kira's Aquarium🐟",owner:"Kira Maguro",date:"12 Desember 2025",status:"Partner"},
+    {image:"https://cdn.discordapp.com/icons/1437694080497877104/51b342307e2971b2c9a642166d6858ff.png",name:"(Private) Clanen's Fluffytopia🍭",owner:"Clara Nefia",date:"11 Juni 2025",status:"Finish"},
+    {image:"https://cdn.discordapp.com/icons/1449407408081342526/51e73f36e5b8c60814ad27e1ddb9ab7e.png",name:"Amaryn Pastry Shop🎂",owner:"Amaryn",date:"21 Agustus 2025",status:"Partner"},
+    {image:"https://cdn.discordapp.com/icons/1449766831710797826/20f41bc549a6e664cda39ce16998f37b.png",name:"Kayce Pavilion",owner:"Kayce Lawrence",date:"14 Desember 2025",status:"Mod"},
+    {image:"https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png",name:"[ 𝓚.𝓐.𝓒 ] 𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂",owner:"Kaikaje",date:"14 Agustus 2025",status:"Finish"},
+    {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base",owner:"Foruxy",date:"27 Desember 2020",status:"Active"}
   ],
 social: [
   {
     name: "Instagram",
     url: "https://www.instagram.com/foruxy_/",
-    svg: `<svg aria-labelledby="icons01-icon-2-title"><title id="icons01-icon-2-title">Instagram</title><use xlink:href="#icon-85976685de3e4af37529a1ce5d57d2a7"></use></svg>`
+    svg: `<img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />`
   },
   {
     name: "X",
     url: "https://x.com/Foruxy",
-    svg: `<svg aria-labelledby="icons01-icon-1-title"><title id="icons01-icon-1-title">X</title><use xlink:href="#icon-31b8880d36499db40d4e47546c4763f3"></use></svg>`
+    svg: `<img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X" />`
   },
   {
-    name: "Youtube",
+    name: "YouTube",
     url: "https://www.youtube.com/@Foruxy",
-    svg: `<svg aria-labelledby="icons01-icon-3-title"><title id="icons01-icon-3-title">YouTube</title><use xlink:href="#icon-e2a43bdcfd2e22a246a1598df579c4ad"></use></svg>`
+    svg: `<img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt="YouTube" />`
   },
   {
     name: "Discord",
     url: "https://discord.com/users/797770498745303092",
-    svg: `<svg aria-labelledby="icons01-icon-5-title"><title id="icons01-icon-5-title">Discord</title><use xlink:href="#icon-3b7eeeccbb457780f277fce4669f67a0"></use></svg>`
+    svg: `<img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord" />`
   }
 ]
 
@@ -200,6 +200,7 @@ CONFIG.myWork.forEach(item=>{
       <div class="mywork-name"><strong>Server Name:</strong> ${item.name}</div>
       <div class="mywork-owner"><strong>Owner:</strong> ${item.owner}</div>
       <div class="mywork-date"><strong>Creation Date:</strong> ${item.date}</div>
+      <div class="mywork-status"><strong>Creation Status:</strong> ${item.status}</div>
     </div>`;
   workContent.appendChild(div);
 });
