--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .about-name::before{content: "Nama: ";}.about-race::before{content: "Race: ";}.about-bio::before{content:"Bio: ";}
 .mywork-name strong,.mywork-owner strong,.mywork-date strong,.mywork-status,{font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
+#socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
 </style>
 </head>
 <body>
