--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ social: [
   {
     name: "X",
     url: "https://x.com/Foruxy",
-    svg: `<img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023.svg" alt="X" />`
+    svg: `<img src="https://cdn.simpleicons.org/x" alt="X">`
   },
   {
     name: "YouTube",
@@ -165,7 +165,7 @@ social: [
   {
     name: "Discord",
     url: "https://discord.com/users/797770498745303092",
-    svg: `<img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord" />`
+    svg: `<img src="https://cdn.simpleicons.org/discord" alt="Discord">`
   }
 ]
 
