--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ CONFIG.myWork.forEach(item=>{
       <div class="mywork-name"><strong>Server Name:</strong> ${item.name}</div>
       <div class="mywork-owner"><strong>Owner:</strong> ${item.owner}</div>
       <div class="mywork-date"><strong>Creation Date:</strong> ${item.date}</div>
-      <div class="mywork-status"><strong>Creation Status:</strong> ${item.status}</div>
+      <div class="mywork-status"><strong>Status:</strong> ${item.status}</div>
     </div>`;
   workContent.appendChild(div);
 });
