--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-date strong,
 .mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
-.social-icon-list {display: flex;flex-direction: column;gap: 12px;align-items: center;justify-content: center;margin-top: 12px;}
-.social-icon-list a {display: block;width: 40px;height: 40px;border-radius: 8px;overflow: hidden;transition: transform 0.2s, background 0.2s;}
-.social-icon-list a img {width: 100%;height: 100%;object-fit: cover;}
-.social-icon-list a:hover {transform: scale(1.1);background: rgba(56, 189, 248, 0.15);}
+.social-icon-list {display: flex;flex-direction: column;align-items: center;justify-content: center; gap: 12px;margin-top: 20px;}
+.social-icon-list a {display: flex;width: 50px; height: 50px;border-radius: 12px;background: rgba(15,23,42,0.95);align-items: center;justify-content: center;transition: transform 0.2s, background 0.2s, box-shadow 0.2s;text-decoration: none;cursor: pointer;}
+.social-icon-list a img {width: 24px;height: 24px;object-fit: contain;}
+.social-icon-list a:hover {transform: scale(1.1);background: rgba(56, 189, 248, 0.2);box-shadow: 0 4px 12px rgba(56,189,248,0.3);}
 #socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
 </style>
 </head>
@@ -215,10 +215,9 @@ CONFIG.myWork.forEach(item=>{
 
 // Social
 const socialBoxContent = document.querySelector("#socialBox .bio-description");
-socialBoxContent.innerHTML = ""; 
+socialBoxContent.innerHTML = "";
 const socialList = document.createElement("div");
 socialList.className = "social-icon-list";
-
 CONFIG.social.forEach(item => {
   const a = document.createElement("a");
   a.href = item.url;
@@ -228,6 +227,7 @@ CONFIG.social.forEach(item => {
 });
 
 socialBoxContent.appendChild(socialList);
+
 
 
 // Cursor
