--- a/index.html
+++ b/index.html
@@ -155,11 +155,14 @@ const CONFIG = {
     {image:"https://cdn.discordapp.com/icons/1405524507330084936/a48a0254bb1646c05e2bf2f782a4eb5f.png",name:"[ 𝓚.𝓐.𝓒 ] 𝓚𝓪𝓲 𝓐𝔃𝓾𝓶𝓪 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂",owner:"Kaikaje",date:"14 Agustus 2025",status:"Finish"},
     {image:"https://cdn.discordapp.com/icons/792733470958551040/ffd45bb32ecb865a6851ebcfa8c39eaa.png",name:"Fowl Base",owner:"Foruxy",date:"27 Desember 2020",status:"Active"}
   ],
+const CONFIG = {
+  // ... config lainnya tetap ...
+
   social: [
     {
       name: "Instagram",
       url: "https://www.instagram.com/foruxy_/",
-      svg: `<img src="/mnt/data/52225d52-6656-4f55-a0c0-647ef449f67c.png" alt="Instagram" />`
+      svg: `<img src="https://i.postimg.cc/RVQqLVrD/instagram-white.png" alt="Instagram" />`
     },
     {
       name: "X",
@@ -169,7 +172,7 @@ const CONFIG = {
     {
       name: "YouTube",
       url: "https://www.youtube.com/@Foruxy",
-      svg: `<img src="/mnt/data/6ae8aef7-36f6-4d13-8753-e94c13b430c3.png" alt="YouTube" />`
+      svg: `<img src="https://i.postimg.cc/3xvXxW6q/youtube-white.png" alt="YouTube" />`
     },
     {
       name: "Discord",
@@ -178,7 +181,6 @@ const CONFIG = {
     }
   ]
 };
-
 
 // Populate content
 document.querySelector(".container .avatar").style.backgroundImage = `url(${CONFIG.avatar})`;
