--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 .social-icon-list {display: flex;flex-direction: row;justify-content: center;align-items: center;gap: 16px;margin-top: 20px;width: 100%;}
-.social-icon-list a {display: flex;width: 50px;height: 50px;border-radius: 12px;background: rgba(15, 23, 42, 0.95);align-items: center;justify-content: center;transition: transform 0.2s, background 0.2s, box-shadow 0.2s;cursor: pointer;text-decoration: none;}
-.social-icon-list a svg,
-.social-icon-list a img {width: 24px;height: 24px;object-fit: contain;margin: -1 auto;display: block;filter: none;}
+.social-icon-list a {display: flex;align-items: center;justify-content: center;width: 50px;height: 50px;border-radius: 12px;background: rgba(15,23,42,0.95);}
+.social-icon-list a img {width: 24px;height: 24px;object-fit: contain;display: block;filter: none;margin: 0;}
 .social-icon-list a img.no-filter {filter: none !important;}
 .social-icon-list a:hover {transform: scale(1.1);background: rgba(56, 189, 248, 0.2);box-shadow: 0 4px 12px rgba(56, 189, 248, 0.3);}
 #socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
