--- a/index.html
+++ b/index.html
@@ -79,15 +79,46 @@ footer{margin-top:18px;font-size:.75rem;color:#64748b;}
 .mywork-date strong,
 .mywork-status strong {font-family: var(--font-title);color: var(--mywork-color);font-weight: normal;}
 footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
-.social-icon-list {display: flex;flex-direction: row;justify-content: center;align-items: center;gap: 16px;margin-top: 20px;width: 100%;}
-.social-icon-list a {display: flex;align-items: center;justify-content: center;width: 50px;height: 50px;border-radius: 12px;background: rgba(15,23,42,0.95);}
+.social-icon-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin-top: 20px;
+}
+
+.social-icon-list a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;    /* ukuran tombol */
+  height: 50px;   /* ukuran tombol */
+  border-radius: 12px;
+  background: rgba(15,23,42,0.95);
+  transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+  overflow: hidden; /* pastikan ikon tidak keluar */
+}
+
 .social-icon-list a img {
-  width: 100%;   /* ikon isi penuh tombol */
-  height: 100%;  /* ikon isi penuh tombol */
+  width: 100%;   /* ikon mengisi tombol */
+  height: 100%;
   object-fit: contain;
   display: block;
-.social-icon-list a img.no-filter {filter: none !important;}
-.social-icon-list a:hover {transform: scale(1.1);background: rgba(56, 189, 248, 0.2);box-shadow: 0 4px 12px rgba(56, 189, 248, 0.3);}
+  filter: none;   /* pastikan warna tidak berubah */
+  transition: transform 0.3s;
+}
+
+.social-icon-list a:hover {
+  transform: scale(1.1);
+  background: rgba(56, 189, 248, 0.2);
+  box-shadow: 0 4px 12px rgba(56, 189, 248, 0.3);
+}
+
+.social-icon-list a:hover img {
+  transform: scale(0.95); /* sedikit efek interaksi ikon */
+}
+
 #socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
 </style>
 </head>
