--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 16px;
+  gap: 8px; /* jarak antar tombol */
   margin-top: 20px;
 }
 
@@ -92,20 +92,20 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;    /* ukuran tombol */
-  height: 50px;   /* ukuran tombol */
+  width: 60px;    /* ukuran tombol diperbesar */
+  height: 60px;   /* ukuran tombol diperbesar */
   border-radius: 12px;
   background: rgba(15,23,42,0.95);
   transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
-  overflow: hidden; /* pastikan ikon tidak keluar */
+  overflow: hidden;
 }
 
 .social-icon-list a img {
-  width: 100%;   /* ikon mengisi tombol */
-  height: 100%;
+  width: 90%;   /* ikon hampir penuh tombol */
+  height: 90%;
   object-fit: contain;
   display: block;
-  filter: none;   /* pastikan warna tidak berubah */
+  filter: none;
   transition: transform 0.3s;
 }
 
@@ -116,8 +116,9 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 }
 
 .social-icon-list a:hover img {
-  transform: scale(0.95); /* sedikit efek interaksi ikon */
+  transform: scale(0.95); /* efek interaksi ikon */
 }
+
 
 #socialBox .bio-description a img {width: 24px;height: 24px;margin-right: 10px;vertical-align: middle;}
 </style>
