--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
   height: 60px;
   border-radius: 12px;
   background: rgba(15,23,42,0.95);
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
 }
 
 .social-icon-list a img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 90%;  /* agar ada sedikit gap dari tepi tombol */
+  height: 90%;
+  object-fit: contain;  /* agar ikon tidak terdistorsi */
 }
+
 
 .social-icon-list a:hover {
   transform: scale(1.1);
