--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
 }
 
 .social-icon-list a img {
-  width: 90%;  /* agar ada sedikit gap dari tepi tombol */
+  width: 90%;
   height: 90%;
-  object-fit: contain;  /* agar ikon tidak terdistorsi */
+  object-fit: contain;
+  margin-left: 2px; /* geser ke kanan */
 }
+
 
 
 .social-icon-list a:hover {
