--- a/index.html
+++ b/index.html
@@ -84,37 +84,37 @@ footer{font-family: var(--font-title);font-weight: normal;font-size: 0.75rem;}
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 8px; /* jarak antar tombol */
+  gap: 12px; /* jarak antar tombol */
   margin-top: 20px;
+  width: 100%;
 }
 
 .social-icon-list a {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  border-radius: 12px;
-  background: rgba(15,23,42,0.95);
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  width: 60px;   /* ukuran tombol */
+  height: 60px;  /* ukuran tombol */
+  border-radius: 12px;
+  background: rgba(15,23,42,0.95);
   transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+  cursor: pointer;
 }
 
 .social-icon-list a img {
-  width: 90%;
+  width: 90%;   /* ikon hampir penuh tombol */
   height: 90%;
   object-fit: contain;
-  margin-left: 2px; /* geser ke kanan */
+  display: block;
+  filter: brightness(1); /* warna putih bila PNG */
 }
-
-
 
 .social-icon-list a:hover {
   transform: scale(1.1);
+  box-shadow: 0 4px 12px rgba(56,189,248,0.3);
   background: rgba(56, 189, 248, 0.2);
-  box-shadow: 0 4px 12px rgba(56, 189, 248, 0.3);
 }
+
 
 .social-icon-list a:hover img {
   transform: scale(0.95); /* efek interaksi ikon */
